--- a/sorry.html
+++ b/sorry.html
@@ -11,10 +11,10 @@
 
   <div class="sorry-card enhanced">
     <img src="https://media.tenor.com/qzjLn_6vNhAAAAAj/capoo-bugcat.gif" alt="Capoo Crying" class="capoo-gif">
-    <h1>Xin lỗi nha 😢</h1>
-    <p>Mình thật sự xin lỗi vì những gì đã làm bạn buồn...</p>
-    <p>Không cố ý đâu, và mình mong bạn tha thứ 🥺</p>
-    <p>💙 Mình trân trọng bạn rất nhiều 💙</p>
+    <h1>Anh chân thành xin lỗi😢</h1>
+    <p>Về những gì anh nói và vì thái độ ứng xử của anh</p>
+    <p>Anh cảm ơn cún đã dành thời gian xem cái này 🥺</p>
+    <p>💙 Cún đồng ý tha thứ cho anh không 💙</p>
   </div>
 
    <!-- Nút bên dưới khung thông điệp -->
